basic welcome page for preview

--- a/htmlSrc/pages/index.tmpl.html
+++ b/htmlSrc/pages/index.tmpl.html
@@ -1,5 +1,6 @@
 {{template "head" .}}
 {{template "body_start" .}}
-home
+<h1>{{.Data.title}}</h1>
+<p>This is a preview version. Right now the basic display of wares is implemented.</p>
 {{template "body_end" .}}
 {{template "footer" .}}
