prepare wares display

--- a/htmlSrc/pages/wares.tmpl.html
+++ b/htmlSrc/pages/wares.tmpl.html
@@ -26,6 +26,11 @@
             <td>{{.PriceAverage}}</td>
         </tr>
     {{end}}
+    {{if not .Data.wares}}
+        <tr>
+            <td colspan="4">No matching wares found.</td>
+        </tr>
+    {{end}}
     </tbody>
 </table>
 {{template "body_end" .}}
