--- a/htmlSrc/pages/ware.tmpl.html
+++ b/htmlSrc/pages/ware.tmpl.html
@@ -1,5 +1,25 @@
 {{template "head" .}}
 {{template "body_start" .}}
-
+<div class="ware">
+    <h1>{{if .Data.ware.Name.Valid}}{{.Data.ware.Name.String}}{{else if .Data.ware.NameRaw.Valid}}{{.Data.ware.NameRaw.String}}{{end}}</h1>
+    <dl class="datasheet dl-horizontal panel">
+        <dt>Transport</dt>
+        <dd>{{.Data.ware.Transport}}</dd>
+        <dt>Specialist</dt>
+        <dd>{{if .Data.ware.Specialist.Valid}}{{.Data.ware.Specialist.String}}{{else}}-{{end}}</dd>
+        <dt>Size</dt>
+        <dd>{{.Data.ware.Size}}</dd>
+        <dt>Volume</dt>
+        <dd>{{.Data.ware.Volume}}</dd>
+        <dt>Price Min.</dt>
+        <dd>{{.Data.ware.PriceMin}}</dd>
+        <dt>Price Avg.</dt>
+        <dd>{{.Data.ware.PriceAverage}}</dd>
+        <dt>Price Max.</dt>
+        <dd>{{.Data.ware.PriceMax}}</dd>
+        <dt>Container</dt>
+        <dd>{{.Data.ware.Container}}</dd>
+    </dl>
+</div>
 {{template "body_end" .}}
 {{template "footer" .}}
