production info extended

--- a/htmlSrc/pages/wares.tmpl.html
+++ b/htmlSrc/pages/wares.tmpl.html
@@ -23,7 +23,7 @@
                 {{end}}
             </td>
             <td>{{.Transport}}</td>
-            <td>{{.PriceAverage}}</td>
+            <td class="number">{{.PriceAverage}}</td>
         </tr>
     {{end}}
     {{if not .Data.wares}}
