--- a/htmlSrc/pages/ware.tmpl.html
+++ b/htmlSrc/pages/ware.tmpl.html
@@ -36,6 +36,14 @@
             <dt>Info</dt>
             <dd>{{.Text.String}}</dd>
             {{end}}
+            {{if .Stat}}
+            <dt><dfn title="Average Yield - Sum of Average Cost">Production Value</dfn></dt>
+            <dd>{{.Stat.ProductionValue}}</dd>
+            <dt><dfn title="Amount * Average Price">Average Yield</dfn></dt>
+            <dd>{{.Stat.AverageYield}}</dd>
+            <dt>Average Yield/h</dt>
+            <dd>{{.Stat.AverageYieldPerH}}</dd>
+            {{end}}
         </dl>
         {{if .Wares}}
         <table class="table">
@@ -45,6 +53,7 @@
                 <th>Id</th>
                 <th>Name</th>
                 <th>Amount</th>
+                <th><dfn title="Average Price of Ware * Amount">Average Cost</dfn></th>
             </tr>
             </thead>
             <tbody>
@@ -53,10 +62,19 @@
                     <td>{{if .Primary}}Y{{else}}N{{end}}</td>
                     <td><a href="/ware/{{.Ware.Id}}">{{.Ware.Id}}</a></td>
                     <td{{if not .Ware.Name.Valid}} class="warning"{{end}}>{{if .Ware.Name.Valid}}<a href="/ware/{{.Ware.Id}}">{{.Ware.Name.String}}</a>{{else}}?{{end}}</td>
-                    <td>{{.Amount}}</td>
+                    <td class="number">{{.Amount}}</td>
+                    <td class="number">{{.AverageCost}}</td>
                 </tr>
         {{end}}
             </tbody>
+        {{if .Stat}}
+            <tfoot>
+                <tr>
+                    <td colspan="4"></td>
+                    <td class="number">{{.Stat.TotalAverage}}</td>
+                </tr>
+            </tfoot>
+        {{end}}
         </table>
         {{end}}
     {{else}}
