play around with angularjs

--- a/htmlSrc/pages/wares.tmpl.html
+++ b/htmlSrc/pages/wares.tmpl.html
@@ -2,6 +2,7 @@
 {{template "body_start" .}}
 <h1>Wares</h1>
 
+<div ng-controller="WaresListCtrl">
 <table class="table table-bordered">
     <thead>
         <tr>
@@ -33,5 +34,6 @@
     {{end}}
     </tbody>
 </table>
+</div>
 {{template "body_end" .}}
 {{template "footer" .}}
