--- a/htmlSrc/static/tmpl/wares.html
+++ b/htmlSrc/static/tmpl/wares.html
@@ -1,4 +1,31 @@
 <h1>Wares</h1>
+<div ng-controller="WaresListCtrl">
+<form>
+    <div class="form-group">
+        <label for="wares-query">Search</label>
+        <input type="text" id="wares-query" ng-model="query" />
+    </div>
+    <div class="form-group">
+        <label for="wares-filter-internal">Hide internal wares</label>
+        <input type="checkbox" id="wares-filter-internal" ng-model="filterInternal" />
+    </div>
+    <div class="form-group">
+        <input type="checkbox" id="wares-show-equipment" ng-model="showTranspEquipment" />
+        <label for="wares-show-equipment">Equipment</label>
+        <input type="checkbox" id="wares-show-inventory" ng-model="showTranspInventory" />
+        <label for="wares-show-inventory">Inventory</label>
+        <input type="checkbox" id="wares-show-energy" ng-model="showTranspEnergy" />
+        <label for="wares-show-energy">Energy</label>
+        <input type="checkbox" id="wares-show-container" ng-model="showTranspContainer" />
+        <label for="wares-show-container">Container</label>
+        <input type="checkbox" id="wares-show-bulk" ng-model="showTranspBulk" />
+        <label for="wares-show-bulk">Bulk</label>
+        <input type="checkbox" id="wares-show-liquid" ng-model="showTranspLiquid" />
+        <label for="wares-show-liquid">Liquid</label>
+        <input type="checkbox" id="wares-show-fuel" ng-model="showTranspFuel" />
+        <label for="wares-show-fuel">Fuel</label>
+    </div>
+</form>
 <table class="table table-bordered">
     <thead>
     <tr>
@@ -9,14 +36,14 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="ware in wares" ng-class="internalClass(ware)">
+    <tr ng-repeat="ware in wares | filter:filterInternalExp | filter:query | filter:filterTransports" ng-class="internalClass(ware)">
     <td><a href="/ware/{{ware.Id}}">{{ware.Id}}</a></td>
     <td>
-    <a href="/ware/{{ware.Id}}">{{ware.Name.String}}</a>
-    <a href="/ware/{{ware.Id}}">{{ware.NameRaw.String}}</a>
+    <a href="/ware/{{ware.Id}}">{{wares.wareName(ware)}}</a>
     </td>
     <td>{{ware.Transport}}</td>
     <td class="number">{{ware.PriceAverage | number}}</td>
     </tr>
     </tbody>
 </table>
+</div>
