Add notification for non-js on angularjs version.

--- a/htmlSrc/pages/index.tmpl.html
+++ b/htmlSrc/pages/index.tmpl.html
@@ -1,6 +1,7 @@
 {{template "head" .}}
 {{template "body_start" .}}
 <h1>{{.Data.title}}</h1>
-<p>This is a preview version. Right now the basic display of wares is implemented.</p>
+<p class="text-info">This is a preview version. Currently JavaScript is required for the guide to run properly.</p>
+<p class="text-info">Sorry for the inconvenience.</p>
 {{template "body_end" .}}
 {{template "footer" .}}
